Diarios/kubernetes_ejemplos/apache-final/teralco-web-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teralco-web-namespace
  labels:
    name: teralco-web-namespace
